...
                        return .handled
                    }
                    .accessibilityIdentifier("showMenuBarItemToggle")
                LabeledContent("settings.menuBarIcon") {
                    MenuBarIconPopUpButton(selection: $menuBarIconStyle)
                        .fixedSize()
                        .accessibilityIdentifier("menuBarIconPicker")
                }
                .disabled(!showMenuBarItem)
                Text("settings.menuBarBackgroundHelp")
                    .font(.footnote)
                    .foregroundStyle(.secondary)
            }
...
